--- a/_posts/2022-02-09-AddFAQ.md
+++ b/_posts/2022-02-09-AddFAQ.md
@@ -20,7 +20,12 @@ A page dedicated to FAQs (frequently asked questions) can be extremely beneficia
 1. Open a WPBakery Frontend Editor on the page you want to modify
 2. Click the + symbol on the top menu to open the component menu
 3. Navigate to the section Next-Gen
-4. Find the "CTA component" and click the option
+4. Find the "FAQ" component and select to add it to the page
+5. You will need a component for each row you want to add
+6. After selecting the component, the settings will open out
+7. Fill in a title and the content of the expanded FAQ
+8. Click save settings and your changes will take effect
+9. Note: You can start the component as hidden or expanded set the Default state to edit the appearance
 
 
 ## Pro Tip
